[gd_scene load_steps=2 format=3 uid="uid://cerg586hqd046"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_y31ul"]

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_y31ul")

[node name="Holder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainScreen" type="CenterContainer" parent="Holder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="VBoxContainer" parent="Holder/MainScreen"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="GameNameBox" type="VBoxContainer" parent="Holder/MainScreen/MainPanel"]
layout_mode = 2

[node name="GameName" type="Label" parent="Holder/MainScreen/MainPanel/GameNameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "GAME_NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameVersion" type="Label" parent="Holder/MainScreen/MainPanel/GameNameBox"]
layout_mode = 2
text = "Pre-Alpha 0.01"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Holder/MainScreen/MainPanel"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="Holder/MainScreen/MainPanel/VBoxContainer"]
layout_mode = 2
text = "MAIN_MENU_NEW_GAME"

[node name="SettingsButton" type="Button" parent="Holder/MainScreen/MainPanel/VBoxContainer"]
layout_mode = 2
text = "MAIN_MENU_SETTINGS"

[node name="QuitButton" type="Button" parent="Holder/MainScreen/MainPanel/VBoxContainer"]
layout_mode = 2
text = "MAIN_MENU_QUIT"

[node name="SettingsScreen" type="CenterContainer" parent="Holder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1152.0
offset_right = 1152.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsPanel" type="VBoxContainer" parent="Holder/SettingsScreen"]
layout_mode = 2

[node name="EnableMusicButton" type="CheckButton" parent="Holder/SettingsScreen/SettingsPanel"]
layout_mode = 2
button_pressed = true
text = "SETTINGS_ENABLE_MUSIC"

[node name="HBoxContainer" type="HBoxContainer" parent="Holder/SettingsScreen/SettingsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Holder/SettingsScreen/SettingsPanel/HBoxContainer"]
layout_mode = 2
text = "SETTINGS_LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="Holder/SettingsScreen/SettingsPanel/HBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Русский"
popup/item_1/id = 1

[node name="BackButton" type="Button" parent="Holder/SettingsScreen/SettingsPanel"]
layout_mode = 2
text = "MENU_BACK"

[connection signal="pressed" from="Holder/MainScreen/MainPanel/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Holder/MainScreen/MainPanel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Holder/MainScreen/MainPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Holder/SettingsScreen/SettingsPanel/BackButton" to="." method="_on_back_button_pressed"]
